<resources>
    <string name="app_name">AreaPerimetro-Triangulo</string>
    <string name="txtLado_hint_lado">Ingrese lado</string>
    <string name="txtBase_hint_base">Ingrese Base</string>
    <string name="txtAltura_hint_altura">Ingrese Altura</string>

    <string name="btnResultado_text_resultado">CALCULAR</string>
    <string name="triangulo">Triangulo</string>
    <string name="resultado">Resultado</string>
</resources>