<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ContenedorAPTriangulo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="60dp"
    android:layout_marginRight="60dp"
    tools:context=".AreaPerimetroTriangulo">

    <TextView
        android:id="@+id/lblTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/triangulo"
        android:textColor="@color/teal_700"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/txtLado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center|center_horizontal|center_vertical"
        android:hint="@string/txtLado_hint_lado"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/txtBase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center|center_horizontal|center_vertical"
        android:hint="@string/txtBase_hint_base"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/txtAltura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center|center_horizontal|center_vertical"
        android:hint="@string/txtAltura_hint_altura"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/bnResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/btnResultado_text_resultado"

        android:backgroundTint="@color/cardview_dark_background"
        app:cornerRadius="15dp"

        android:textSize="16sp" />

    <TextView
        android:id="@+id/lblResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/resultado"

        android:layout_marginTop="10dp"
        android:textColor="@color/design_default_color_error"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/lblPerimetroTriangulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/lblAreaTriangulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center|center_horizontal|center_vertical" />

    <TextView
        android:id="@+id/lblAutor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:textSize="20sp" />

</LinearLayout>